<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000080"
    tools:context="com.example.login.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">
    <TextView
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:text="LOGIN"
        android:padding="60dp"
        android:textSize="64sp"
    android:paddingTop="60dp"
        android:textStyle="bold"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:layout_editor_absoluteY="101dp"
        app:layout_constraintRight_toLeftOf="@+id/relativeLayout"
        app:layout_constraintLeft_toRightOf="@+id/relativeLayout"
        app:layout_constraintHorizontal_bias="0.512" />

    <RelativeLayout
        android:layout_width="318dp"
        android:layout_height="464dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.51"
        tools:context=".LoginActivity"
        android:id="@+id/relativeLayout">


        <TextView
            android:id="@+id/tv_Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_Username"
            android:layout_alignBottom="@+id/et_Username"
            android:text="@string/username"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="54dp" />

        <EditText
            android:id="@+id/et_Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textView3"
            android:textColor="@android:color/white"
            android:layout_marginTop="37dp"
            android:ems="10"
            android:hint="@string/enterusername"
            android:textColorHint="#808080"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="43dp">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tv_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_Password"
            android:layout_alignBottom="@+id/et_Password"
            android:layout_alignParentStart="true"
            android:text="@string/password"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="134dp" />

        <EditText
            android:id="@+id/et_Password"
            style="@style/Animation.AppCompat.DropDownUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/et_Username"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/white"
            android:ems="10"
            android:hint="@string/enterpassword"
            android:inputType="textPassword"
            android:singleLine="false"
            android:textColorHint="#808080"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="122dp" />

        <Button
            android:id="@+id/bt_SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/bt_SignUp"
            android:layout_alignBottom="@+id/bt_SignUp"
            android:layout_alignParentEnd="true"
            android:text="@string/signin"
            tools:layout_editor_absoluteX="236dp"
            tools:layout_editor_absoluteY="220dp" />

        <Button
            android:id="@+id/bt_ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="119dp"
            android:layout_toEndOf="@+id/bt_SignUp"
            android:text="@string/forgotpassword"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="220dp" />

        <Button
            android:id="@+id/bt_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bt_ForgotPassword"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:text="@string/signup" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="56dp"
            android:text="Enter Username and password:"
            android:textColor="@android:color/white" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
